manifest/chat/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app
  namespace: chat
spec:
  replicas: 9
  selector:
    matchLabels:
      app: chat-app
  template:
    metadata:
      labels:
        app: chat-app
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: chat-app
      containers:
        - name: app
          image: gameme/chatapp:1.9
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
