manifest/chat/minio-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: chat-minio
  namespace: chat
spec:
  serviceName: chat-minio
  replicas: 1
  selector:
    matchLabels:
      app: chat-minio
  template:
    metadata:
      labels:
        app: chat-minio
    spec:
      containers:
        - name: minio
          image: minio/minio:RELEASE.2025-02-28T09-55-16Z
          imagePullPolicy: IfNotPresent
          args:
            - server
            - /data
            - --console-address
            - ":9001"
          ports:
            - containerPort: 9000
              name: api
            - containerPort: 9001
              name: console
          volumeMounts:
            - name: minio-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: minio-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 20Gi
