manifest/chat/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: chat-postgres
  namespace: chat
spec:
  serviceName: chat-postgres
  replicas: 1
  selector:
    matchLabels:
      app: chat-postgres
  template:
    metadata:
      labels:
        app: chat-postgres
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      containers:
        - name: postgres
          image: postgres:17
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 10Gi
