manifest/chat/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-app
  namespace: chat
spec:
  selector:
    app: chat-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
