manifest/chat/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-minio
  namespace: chat
spec:
  selector:
    app: chat-minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
