manifest/chat/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-postgres
  namespace: chat
spec:
  selector:
    app: chat-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
